--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Website Template
+title: Speech Emotion Conversion using Generative Neural Networks
 logo: /assets/img/uhh_logo.svg
 email: # your email address
 description: >- # this means to ignore newlines until "baseurl:"
-  Template for a website using Jekyll and GitHub Pages.
+  A research website showcasing speech emotion conversion using generative neural networks. Includes audio samples demonstrating emotion transformation in speech, project details, and related resources.
 domain: sp-uhh.github.io
-baseurl: "/website_template/" # the subpath of your site, e.g. /blog
+baseurl: "/emoconv-gen/" # the subpath of your site, e.g. /blog
 url: "https://sp-uhh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: # twitter username
 github_username: # github username
